# ai-doc-read-studio

./: .gitignore  README.md  agent_templates.json  clean.py  config.json  eslint.config.js  pyproject.toml  pytest.ini  run_tests.py  sample_doc.md  start.sh  start_app.py
backend/: __init__.py  agents.py  document_parser.py  main.py  token_tracker.py
frontend/: app.js  config.js  index.html
tests/: README.md  __init__.py  conftest.py  sample_document.md  test_agents.py  test_api.py  test_basic_api.py  test_cache_control.py  test_document_parser.py  test_imports.py  test_integration.py  test_logging.py  test_strands_agents.py
